--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-github-calendar": "^5.0.4",
     "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
