--- a/components.json
+++ b/components.json
@@ -19,7 +19,6 @@
     "hooks": "@/hooks"
   },
   "registries": {
-    "@magicui": "https://magicui.design/r/{name}.json",
-    "@ncdai": "https://chanhdai.com/r/{name}.json"
+    "@magicui": "https://magicui.design/r/{name}.json"
   }
 }
